force-app/main/default/objects/User/fields/Active_Sessions__c.field-meta.xml
<CustomField>
    <fullName>Active_Sessions__c</fullName>
    <description>Number of active coaching sessions for this coach</description>
    <label>Active Sessions</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField> 