force-app/main/default/objects/User/fields/Coach_Specialization__c.field-meta.xml
<CustomField>
    <fullName>Coach_Specialization__c</fullName>
    <description>Primary specialization area for this coach</description>
    <label>Coach Specialization</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Strength</fullName>
            </value>
            <value>
                <fullName>Weight Loss</fullName>
            </value>
            <value>
                <fullName>Running</fullName>
            </value>
            <value>
                <fullName>Nutrition</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField> 