force-app/main/default/objects/User/fields/Is_Coach__c.field-meta.xml
<CustomField>
    <fullName>Is_Coach__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates if this user is a fitness coach</description>
    <label>Is Coach</label>
    <type>Checkbox</type>
</CustomField> 